# Thesis

./: .MATLABDriveTag  .gitignore  README.md
Matlab/: check_if_PC_zero.m  get_azimuth_vex_v2.m  get_tripivot.m  test_v8.m  triangulate_v1.m
Matlab/ThesisNoblecilla/: sceneReconstruction.asv  sceneReconstruction.m
Matlab/old files/: get_boundary_points.m  last_surfaces_v1.m  particular_surfaces_allowed_v1.m  sidetosideFill_v2.m  surfaces_allowed_v1.m  test_sphere.m  test_v2.m  test_v4_despliegue_donas.fig
Others/: .MATLABDriveTag
Others/MyCrust230909/: .MATLABDriveTag  T.mat  (+1 more)
VisualCode/: CMakeLists.txt  MinaData.csv  csv_data.mat  generatedxf  main  main.cpp  main.cu  ouster_reconstruction.h  points_comparison.m  scan03.cu  test  test.c
VisualCode/files/: MinaData.csv  plot_surface.m
VisualCode/src/: CMakeLists.txt  main.cpp  main.cu  ouster_reconstruction.h  scan03.cu
VisualCode/src/files/: plot_surface.m
VisualCode/src/testfiles/: plot_surface.m
VisualCode/testfiles/: plot_surface.m
VisualStudio/: VisualStudio.sln
data a Carlos/: .MATLABDriveTag  Data_mina.mat  Info_estatica.m  esfera_ideal.mat  malla_triang_ideal.mat  obtener_datos.m
escaneo_mina/: .MATLABDriveTag  Donas.rar  mina_despliegue_donas.fig  mina_scan_v1.m  mina_scan_v2.m  mina_scan_v3.m  spliMinaData.m
rotating_test/: .MATLABDriveTag  rotating_test_v1.m  xy_curve_eq_v1.m  xy_curve_eq_v2.m  xy_curve_eq_v3.m
test/: .MATLABDriveTag  Thesis.m  creategif.m  data_mina_v2.mat  get_boundary_points_v2.m  get_tripivot.m  line_equation.m  mina_surface.fig  sidetosideFill_v3.m  test_v8.m
(+43 files in other folders)
